--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "react-native-caf-face-liveness-1",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "title": "React Native Caf Face Liveness",
   "description": "TODO",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
+  "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
-    "README.md",
+    "src",
+    "lib",
     "android",
-    "index.js",
     "ios",
-    "react-native-caf-face-liveness.podspec"
+    "cpp",
+    "*.podspec",
+    "!ios/build",
+    "!android/build",
+    "!android/gradle",
+    "!android/gradlew",
+    "!android/gradlew.bat",
+    "!android/local.properties",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__",
+    "!**/.*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "example": "yarn workspace react-native-iproov-lib-test-example",
+    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
+    "prepare": "bob build",
+    "release": "release-it"
   },
   "repository": "https://github.com/HMDarkFir3/react-native-caf-face-liveness-1",
   "keywords": [
@@ -34,13 +51,58 @@
     "react-native": "*"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^18.4.3",
+    "@evilmartians/lefthook": "^1.5.5",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@types/react": "17.0.21",
     "@types/react-native": "0.70.0",
+    "commitlint": "^18.4.3",
+    "del-cli": "^5.1.0",
     "react": "^18.2.0",
     "react-native": "^0.71.13",
+    "react-native-builder-bob": "^0.23.2",
+    "release-it": "^17.0.1",
+    "turbo": "^1.11.2",
     "typescript": "^5.3.3"
   },
   "resolutions": {
     "@types/react": "17.0.21"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "requireBranch": "main",
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
